Update content and forms

--- a/templates/content/fr_CD/how.html.twig
+++ b/templates/content/fr_CD/how.html.twig
@@ -9,51 +9,81 @@
 
             <div class="process-details">
                 <p>
-                    Vous allez remplir un questionnaire, différent selon si vous souhaitez aider,
-                    avez besoin d'aide ou inscrivez quelqu'un qui a besoin d'aide.
+                    Vous allez remplir un questionnaire, différent selon si vous souhaitez aider ou avez besoin d'aide.
                 </p>
 
                 <p>
-                    Vous inscrirez le code postal, vous pourrez décrire le besoin d'aide.
-                    Ensuite, vous allez être mis en relation sur la base du code postal et des
-                    critères entrés, par le biais d'un email envoyé à vous et à l'autre personne.
+                    Vous inscrirez votre commune, vous pourrez décrire le besoin d'aide. Vous allez ensuite être
+                    mis en relation sur la base de la commune et des critères entrés.
                 </p>
 
                 <p>
-                    À partir de là c'est à vous de jouer.
+                    L’équipe de Lisungi vous recontactera par téléphone ou par mail pour vous indiquer la personne
+                    que vous pourrez aider / qui pourra vous aider, ainsi que son contact.
                 </p>
 
                 <p>
-                    Vous faites connaissance, par visio ou par téléphone au début, et si vous
-                    décidez de vous entraider, alors vous validez dans le mail reçu que vous
-                    n'avez plus besoin des services de la plateforme, et vos données seront
-                    effacées automatiquement. Si vous oubliez de nous l'indiquer, vos données
-                    seront de toute façon effacées à la fin de l'épidémie. Nous vous invitons à
-                    respecter, à tout instant de votre relation d'entraide, les consignes en
-                    vigueur disponibles sur
-                    <a href="https://www.gouvernement.fr/info-coronavirus" target="_blank">https://www.gouvernement.fr/info-coronavirus</a>.
+                    Quand cela est possible, nous vous indiquerons également des lieux de dépôt partenaires
+                    de l’initiative Lisungi pour acheminer ou récupérer le matériel prêt de chez vous
+                    facilement en toute sécurité et transparence.
                 </p>
 
                 <p>
-                    Nous limitons l'inscription des personnes offrant leur aide aux 18-60 ans en bonne
-                    santé, mais chacun doit s'assurer qu'il réunit les conditions pour s'engager avant
-                    de s'inscrire.
+                    Ensuite, c’est à vous de jouer.
+                </p>
+
+                <p>
+                    Nous vous invitons à respecter, à tout instant de votre relation d'entraide,
+                    les consignes sanitaires en vigueur disponible sur ****.
                 </p>
 
                 <h5 class="font-weight-bold mt-5">
-                    Qui peut aider ?
+                    Qui peut donner ?
                 </h5>
 
                 <p>
-                    Tout le monde peut aider (si vous avez entre 18 et 60 ans et que vous ne faites pas
-                    partie des publics à risque :
-                    <a href="https://solidarites-sante.gouv.fr/actualites/actualites-du-ministere/article/coronavirus-qui-sont-les-personnes-fragiles" target="_blank">vérifier si vous faites partie des publics à risque sur le site du ministère de la Santé</a>) !
+                    Tout le monde, particulier, entreprises ou organisations peut effectuer un don.
+                </p>
+
+                <h5 class="font-weight-bold mt-5">
+                    Quels sont les dons acceptés ?
+                </h5>
+
+                <p>
+                    Lisungi.org a pour objectif de venir en aide aux professionnels de santé en
+                    première ligne contre le virus dans une démarche de dons solidaires.
                 </p>
 
                 <p>
-                    Si vous êtes en arrêt exceptionnel pour garder vos enfants, ou si vous êtes
-                    disponibles pour d'autres raisons et que vous avez la volonté de vous engager
-                    dans la lutte contre l'épidémie, vous pouvez vous inscrire !
+                    Trois types de dons sont acceptés :
+                </p>
+
+                <ul>
+                    <li>
+                        <strong>Dons de matériel médical et de protection</strong> :
+                        Masques, Lunettes, Blouses, Gel hydroalcoolique, Gants, Blouses et surblouse,
+                        Désinfectant, Thermomètre, Stéthoscope, Appareil respiratoire, combinaisons ...
+                    </li>
+                    <li>
+                        <strong>Denrées alimentaires</strong> :
+                        Riz, Poulet, Viande, Huile, lait, sucre, conserves (tomates) ...
+                    </li>
+                    <li>
+                        <strong>Autres matériels</strong> :
+                        Médicaments, aides sanitaires, matelas, savon antiseptique ...
+                    </li>
+                </ul>
+
+                <p>
+                    Il est important que les donateurs s’assurent que le matériel donné respecte les
+                    recommandations de l’Office Congolais de Contrôle et les brevets légaux associés.
+                </p>
+
+                <p>
+                    Pour rappel, toute demande et/ou toute offre contraire à l’ordre public et aux
+                    bonnes mœurs, toute tentative de marché noir et plus largement tout comportement
+                    visant à utiliser le site web à des fins détournées de son objet sera immédiatement
+                    rapporté aux autorités.
                 </p>
 
                 <h5 class="font-weight-bold mt-5">
@@ -61,114 +91,24 @@
                 </h5>
 
                 <p>
-                    Aujourd'hui, nous focalisons notre aide sur deux publics :
-                </p>
-
-                <ul>
-                    <li class="mb-3">
-                        <strong>La première ligne de la lutte contre le virus</strong> :
-                        ce sont les soignants, pharmaciens, membres des services d'urgence, aide à domicile
-                        pour personnes en situation de handicap ou personnes âgées, personnes assurant
-                        l'approvisionnement en médicaments, nourriture, énergie, et tant d'autres professions ;
-                    </li>
-                    <li>
-                        <strong>Les personnes faisant partie des populations à risque</strong>
-                        (de par l'âge, les antécédents médicaux ou les difficultés à se déplacer) qui ont
-                        besoin d'une aide pour faire leurs courses principalement.
-                    </li>
-                </ul>
-
-                <p>
-                    Vous vous reconnaitrez, nous vous faisons confiance. Nous savons qu'une personne n'ayant
-                    pas besoin du service car sa situation ou son activité professionnelle ne le justifie pas
-                    ne s'inscrira pas. Chacun est responsable, et nous croyons en chacun d'entre nous pour vaincre cette épidémie.
-                </p>
-
-                <h5 class="font-weight-bold mt-5">
-                    Comment aller aider ?
-                </h5>
-
-                <p>
-                    Dès lors que vous commencez votre entraide, munissez-vous de l'attestation de déplacement
-                    dérogatoire (<a href="https://www.interieur.gouv.fr/attestation_de_deplacement_derogatoire" target="_blank">disponible ici</a>)
-                    en cochant la case 2 - déplacements pour effectuer des achats de première nécessité -
-                    et/ou la case 4 - déplacements pour la garde d'enfants.
+                    Aujourd'hui, nous focalisons notre aide sur les professionnels de santé en première
+                    ligne face au virus. Ce sont les soignants, pharmaciens, membres des services d'urgence, de la
+                    cellule de riposte, des centres de prise en charge des patients à maladie chronique (diabète,
+                    anémie) etc.
                 </p>
 
                 <p>
-                    Présentez-la aux autorités si elle vous est demandée.
+                    Vous vous reconnaitrez, nous vous faisons confiance. Nous savons qu'une personne n'ayant pas besoin
+                    du service car sa situation ou son activité professionnelle ne le justifie pas ne s'inscrira pas.
+                    Chacun est responsable, et nous croyons en chacun d'entre nous pour vaincre cette épidémie.
                 </p>
-
-                <p>
-                    De plus, nous vous invitons à garder en tête que de nombreuses personnes sont
-                    porteur-sains du virus : si vous acceptez d'aider quelqu'un et d'être aidé, soyez
-                    d'autant plus vigilants à vos actions quotidiennes, et suivez bien les recommandations
-                    sanitaires et gouvernementales :
-                    <a href="https://www.gouvernement.fr/info-coronavirus" target="_blank">
-                        https://www.gouvernement.fr/info-coronavirus</a>.
-                </p>
-
-                <p>
-                    Rappel des gestes barrières :
-                </p>
-
-                <ul>
-                    <li>
-                        Se laver les mains très régulièrement ;
-                    </li>
-                    <li>
-                        Tousser ou éternuer dans son coude ou dans un mouchoir ;
-                    </li>
-                    <li>
-                        Saluer sans se serrer la main, éviter les embrassades ;
-                    </li>
-                    <li>
-                        Utiliser des mouchoirs à usage unique et les jeter ;
-                    </li>
-                    <li>
-                        Eviter les rassemblements, limiter les déplacements et les contacts.
-                    </li>
-                </ul>
-
-                <p>
-                    Pour les courses en particulier: <strong>la règle est le sans contact</strong>.
-                    Assurez vous de faire les courses selon
-                    <a href="https://www.economie.gouv.fr/coronavirus-guide-des-precautions-sanitaires-livraison-repas" target="_blank">
-                        les recommandations du ministère de l'économie</a>.
-                </p>
-
-                <p>
-                    La livraison sans contact se déroule dans les conditions suivantes :
-                </p>
-
-                <ul>
-                    <li class="mb-3">
-                        Les gestes barrières (se laver très régulièrement les mains, tousser ou
-                        éternuer dans son coude ou dans un mouchoir, utiliser un mouchoir à usage
-                        unique et le jeter, saluer sans se serrer la main et sans embrassades)
-                        doivent être appliqués en permanence ;
-                    </li>
-                    <li class="mb-3">
-                        Le volontaire fait les courses et les place directement dans les sacs ;
-                    </li>
-                    <li class="mb-3">
-                        Lors de la livraison des courses, le volontaire dépose les sacs devant
-                        la porte et prévient la personne aidée de son arrivée (en frappant ou en
-                        sonnant avec son coude, ou en appelant avant) ;
-                    </li>
-                    <li class="mb-3">
-                        Le volontaire part immédiatement ou s'écarte d'une distance de minimum
-                        2 mètres de la porte, avant ouverture de la porte. L'objectif est de ne
-                        pas se croiser.
-                    </li>
-                </ul>
 
                 <h5 class="font-weight-bold mt-5">
                     Combien ça coûte ?
                 </h5>
 
                 <p>
-                    En Première Ligne est un réseau d'entraide complètement gratuit. C'est en nous soutenant
+                    Lisungi est un réseau d'entraide complètement gratuit. C'est en nous soutenant
                     tous ensemble mutuellement que nous vaincrons le virus.
                 </p>
             </div>
