--- a/templates/content/fr_CD/legalities.html.twig
+++ b/templates/content/fr_CD/legalities.html.twig
@@ -13,7 +13,7 @@
                 </h5>
 
                 <p>
-                    XXX : <a href="mailto:team@lisungi.org">team@lisungi.org</a>
+                    XXX : <a href="mailto:contact@lisungi.org">contact@lisungi.org</a>
                 </p>
 
                 <h5 class="font-weight-bold mt-4">
@@ -21,7 +21,7 @@
                 </h5>
 
                 <p>
-                    XXX : <a href="mailto:team@lisungi.org">team@lisungi.org</a>
+                    XXX : <a href="mailto:contact@lisungi.org">contact@lisungi.org</a>
                 </p>
 
                 <h5 class="font-weight-bold mt-4">
