--- a/templates/content/fr_CD/privacy.html.twig
+++ b/templates/content/fr_CD/privacy.html.twig
@@ -10,7 +10,7 @@
             <div class="process-details">
                 <p>
                     Le Responsable de Traitement de lisungi.org est XXX
-                    (<a href="mailto:team@lisungi.org">team@lisungi.org</a>).
+                    (<a href="mailto:contact@lisungi.org">contact@lisungi.org</a>).
                 </p>
 
                 <p>
@@ -30,7 +30,7 @@
                     Les données collectées dans le cadre du traitement de mise en relation de personnes à
                     des visées d'entraidre sont utilisées uniquement pour cet objectif. Elles sont supprimées
                     automatiquement 1 mois après la mise en relation, ou sur simple demande à
-                    <a href="mailto:team@lisungi.org">team@lisungi.org</a>.
+                    <a href="mailto:contact@lisungi.org">contact@lisungi.org</a>.
                 </p>
 
                 <p>
@@ -44,7 +44,7 @@
                     Vous disposez d'un droit d'accès, de rectification, d’effacement et de portabilité
                     de vos données ainsi que d’un droit d'opposition et d'un droit de limitation du
                     traitement des données vous concernant. Vous pouvez exercer vos droits en nous
-                    contactant à l'adresse suivante : <a href="mailto:team@lisungi.org">team@lisungi.org</a>.
+                    contactant à l'adresse suivante : <a href="mailto:contact@lisungi.org">contact@lisungi.org</a>.
                 </p>
             </div>
         </div>
