--- a/templates/content/fr_CD/who.html.twig
+++ b/templates/content/fr_CD/who.html.twig
@@ -9,27 +9,27 @@
 
             <div class="process-details">
                 <p>
-                    Le projet lisungi.org est à l'initiative de :
+                    Lisungi c’est toi. C’est moi. C’est nous tous qui sommes de près ou de loin des victimes directs ou
+                    collatérales des effets de l’épidémie Covid-19. Nous sommes des victimes mais pas des résiliés, nous
+                    sommes des engagés pour le bien de l’autre et le bien commun.
                 </p>
 
-                <ul>
-                    <li>
-                        Titouan Galopin : <a href="mailto:titouan@lisungi.org">titouan@lisungi.org</a>
-                    </li>
-                    <li>
-                        Adrien Duguet : <a href="mailto:adrien@lisungi.org">adrien@lisungi.org</a>
-                    </li>
-                    <li>
-                        Gregory Grellet : <a href="mailto:gregory@lisungi.org">gregory@lisungi.org</a>
-                    </li>
-                </ul>
+                <p>
+                    Lisungi c’est la grande chaîne des citoyens anonymes dans leur générosité et entiers dans leur don
+                    pour l’autre.
+                </p>
+
+                <p>
+                    Lisungi c’est la Bienveillance, car aider l’autre, c’est s’aider soi-même. Et dans cette crise nous
+                    avons tous besoin d’aide.
+                </p>
 
                 <h5 class="font-weight-bold mt-5">
-                    Point de contact de l'équipe entière :
+                    Nous contacter
                 </h5>
 
                 <p>
-                    <a href="mailto:team@lisungi.org">team@lisungi.org</a>
+                    <a href="mailto:contact@lisungi.org">contact@lisungi.org</a>
                 </p>
             </div>
         </div>
