--- a/templates/content/fr_CD/why.html.twig
+++ b/templates/content/fr_CD/why.html.twig
@@ -9,36 +9,22 @@
 
             <div class="process-details">
                 <p>
-                    Dans les prochaines semaines, de nombreuses personnes vont risquer
-                    leur santé, donner leur énergie 15h par jour pour sauver des vies et
-                    s'assurer que les fonctions vitales de notre pays sont encore assurées.
+                    De tout temps, la solidarité a toujours fait vivre nos villages, nos cités et nos villes en temps de
+                    paix comme en temps d’épreuve parce que nous avons conscience de nos inégalités de chance. Cette
+                    plateforme est un moyen de venir en aide en particulier à ceux qui sont en première ligne à la fois
+                    dans la bataille face au Covid-19 mais aussi à ceux qui sont en première ligne face aux conséquences
+                    directs de cette pandémie.
                 </p>
 
                 <p>
-                    Ce sont les soignants, pharmaciens, membres des services d'urgence,
-                    aide à domicile pour personnes en situation de handicap / personnes
-                    âgées ou personnes fragiles, tous les personnels assurant
-                    l'approvisionnement en médicaments, nourriture, énergie, et tant
-                    d'autres professions. Merci à eux.
+                    Bien que loin jusqu’ici des statistiques du drame sanitaire que vit beaucoup de pays dans le monde,
+                    c’est plus que jamais le combat de tous, un combat qui qui doit nous alerter, nous souder et nous
+                    conduire à plus de solidarité pour faire face ensemble.
                 </p>
 
                 <p>
-                    Permettons-leur de ne pas se préoccuper de qui gardera leurs
-                    enfants ou de s'il y aura suffisamment à manger chez eux quand
-                    ils rentreront.
-                </p>
-
-                <p>
-                    Gratuit, sans publicité, open-source, ne gardant pas vos données, avec la volonté
-                    d'aider bénévolement, notre plateforme veut permettre la mise en place d'une
-                    entraide rapide, sûre et facile entre individus, afin de faire face à l'épidémie
-                    de Covid-19 qui frappe notre pays.
-                </p>
-
-                <p>
-                    Nous ne sommes pas une entreprise, nous voulons uniquement contribuer à notre niveau
-                    à la lutte contre le virus. Et quand nous l'aurons vaincu, notre site disparaitra.
-                    Mais d'ici là, vous pourrez compter sur nous.
+                    Mis à nue par cette crise, c’est l’occasion pour nous tous de redessiner notre modèle social, notre
+                    vivre ensemble.
                 </p>
 
                 <a href="{{ path('content_how') }}">
