--- a/templates/content/fr_CD/international.html.twig
+++ b/templates/content/fr_CD/international.html.twig
@@ -4,57 +4,37 @@
     <div class="process-box">
         <div class="bg-light p-3 p-lg-4">
             <h3 class="text-center font-weight-bold mb-4">
-                Enpremiereligne: fostering solidarity networks against the COVID-19
+                International
             </h3>
 
             <div class="process-details">
-                <h5 class="font-weight-bold">
-                    Who we are
-                </h5>
-
                 <p>
-                    Enpremiereligne.fr (“on the frontline”) is a free online solidarity network that was launched
-                    on March 15th 2020 in response to the COVID-19 crisis in France. It aims to provide to the
-                    mobilised professionals, whose work is vital to the fight against the virus, with support
-                    in their daily tasks (babysitting, grocery shopping etc.). The platform is also opened to
-                    isolated people in need. It puts them in touch with volunteers living in the same geographical
-                    area.
+                    La plateforme Lisungi.org a été mis en place avec le soutien technique de l’équipe du site français
+                    <a href="https://enpremiereligne.fr" target="_blank">enpremiereligne.fr</a>.
                 </p>
 
                 <p>
-                    Since its launch, the platform has got more than <strong>500,000</strong> unique viewers and
-                    has gathered applications from <strong>65,000</strong> volunteers. So far, hundreds of missions
-                    have been completed across the country.
-                </p>
-
-                <h5 class="font-weight-bold mt-5">
-                    Sharing our tools and experience – Contact us
-                </h5>
-
-                <p>
-                    The tool is tailored for the French public and is constantly being adapted to follow
-                    the directives of the French authorities.
+                    En Première Ligne est un réseau d’entraide solidaire face au virus lancé le 15 Mars 2020 en réponse
+                    à la crise du COVID-19 en France. Le site met en relation les travailleurs mobilisés en première
+                    ligne face au virus avec des volontaires prêt à les aider pour les tâches de la vie quotidienne
+                    (garde d’enfant, achat des courses etc) .
                 </p>
 
                 <p>
-                    However, the code of this platform is opensource and we welcome any initiative to replicate
-                    it in other national contexts where it can be useful.
+                    La plateforme a été visitée par plus de 800 000 visiteurs et compte aujourd’hui plus de 84 000
+                    volontaires. Grâce à cela, des centaines de missions solidaires ont pu être effectuées dans tout le
+                    pays.
                 </p>
 
                 <p>
-                    We would be delighted to share our experience and support foreign initiatives to develop
-                    similar tools abroad. To support your projects, we’ve launched dedicated international
-                    taskforces.
+                    Le projet En Première Ligne est un projet gratuit et opensource. Si vous souhaitez rejoindre la
+                    communauté de développeurs mobilisés face au virus, contactez
+                    <a href="mailto:tech@enpremiereligne.fr">tech@enpremiereligne.fr</a>.
                 </p>
 
                 <p>
-                    If you want to be part of our tech network to fight the virus, feel free to contact us
-                    on <a href="mailto:tech@lisungi.org">tech@lisungi.org</a> for any further information.
-                </p>
-
-                <p>
-                    If you want to launch a similar initiative in your country, feel free to contact us at
-                    <a href="mailto:world@lisungi.org">world@lisungi.org</a>.
+                    Si vous souhaitez lancer une initiative similaire dans votre propre pays, n’hésitez pas à nous écrire
+                    sur <a href="mailto:world@enpremiereligne.fr">world@enpremiereligne.fr</a>.
                 </p>
             </div>
         </div>
