--- a/templates/process/helper.html.twig
+++ b/templates/process/helper.html.twig
@@ -34,16 +34,23 @@
                     </div>
                 </div>
 
-                <div class="row align-items-center">
+                <div class="row">
                     <div class="col-12 col-lg-6 mb-3">
                         {{ form_row(form.locality, {'label': 'label.locality-required'|trans}) }}
                     </div>
                     <div class="col-12 col-lg-6 mb-3">
-                        {{ form_row(form.isCompany, {'label': 'label.is-company'|trans}) }}
+                        {{ form_row(form.company, {'label': 'label.company'|trans, 'help': 'help.company'|trans}) }}
                     </div>
                 </div>
 
-                {{ form_row(form.email, {'label': 'label.email-required', 'help': 'help.email'|trans}) }}
+                <div class="row">
+                    <div class="col-12 col-lg-6 mb-3">
+                        {{ form_row(form.email, {'label': 'label.email-required', 'help': 'help.email'|trans}) }}
+                    </div>
+                    <div class="col-12 col-lg-6 mb-3">
+                        {{ form_row(form.phone, {'label': 'label.phone', 'help': 'help.email'|trans}) }}
+                    </div>
+                </div>
             </div>
 
             <div class="process-block bg-white p-3 p-lg-4 mb-4">
@@ -106,17 +113,6 @@
                     </div>
                 </div>
 
-                <div class="row mb-3">
-                    <div class="col-lg-5">
-                        {{ form_label(form.disinfectant, 'label.helper-disinfectant'|trans) }}
-                    </div>
-                    <div class="col-lg-7">
-                        {{ form_widget(form.disinfectant) }}
-                        {{ form_errors(form.disinfectant) }}
-                        <small class="form-text text-muted">{{ 'help.how-many-ml'|trans }}</small>
-                    </div>
-                </div>
-
                 <div class="row">
                     <div class="col-lg-5">
                         {{ form_label(form.paracetamol, 'label.helper-paracetamol'|trans) }}
@@ -166,6 +162,13 @@
                         <small class="form-text text-muted">{{ 'help.other'|trans }}</small>
                     </div>
                 </div>
+            </div>
+
+            <div class="process-block bg-white p-3 p-lg-4 mb-4">
+                {{ form_row(form.confirm_legal, {
+                    'label': 'label.confirm_legal',
+                    'label_attr': { 'class': 'checkbox-custom' },
+                }) }}
             </div>
 
             <div class="process-block bg-white p-3 p-lg-4 mb-5">
