--- a/templates/_include/fr_CD/homepage_footer.html.twig
+++ b/templates/_include/fr_CD/homepage_footer.html.twig
@@ -51,43 +51,9 @@
         Ils parlent de vous !
     </div>
 
-    <a href="https://www.20minutes.fr/sante/2742831-20200318-coronavirus-logements-courses-gardes-solidarite-envers-soignants-organise" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/20minutes.png') }}" />
-    </a>
+    <img src="{{ asset('fr_CD/res/medias/actualitecd.png') }}" />
 
-    <a href="https://twitter.com/brutofficiel/status/1240281822401105920" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/brut.png') }}" />
-    </a>
+    <img src="{{ asset('fr_CD/res/medias/bonetv.png') }}" />
 
-    <a href="https://www.europe1.fr/societe/coronavirus-4-sites-internet-pour-faciliter-la-solidarite-entre-voisins-3955966" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/europe1.png') }}" />
-    </a>
-
-    <a href="https://www.lefigaro.fr/flash-actu/courses-garde-d-enfants-face-au-coronavirus-les-initiatives-solidaires-se-multiplient-sur-internet-20200315" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/figaro.png') }}" />
-    </a>
-
-    <a href="https://www.francebleu.fr/infos/societe/coronavirus-des-initiatives-pour-aider-les-soignants-1584455310" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/francebleu.png') }}" />
-    </a>
-
-    <a href="https://www.lci.fr/population/coronavirus-trois-solutions-pour-aider-le-personnel-de-sante-mobilise-2148129.html" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/lci.png') }}" />
-    </a>
-
-    <a href="https://www.lemonde.fr/planete/article/2020/03/19/coronavirus-comment-pouvez-vous-aider-tout-en-etant-confine_6033695_3244.html" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/lemonde.png') }}" />
-    </a>
-
-    <a href="https://twitter.com/en1ereligne/status/1243523242079502337" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/magdelasante.png') }}" />
-    </a>
-
-    <a href="https://www.ouest-france.fr/leditiondusoir/data/82936/reader/reader.html#!preferred/1/package/82936/pub/117254/page/5" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/ouest-france.png') }}" />
-    </a>
-
-    <a href="https://www.rtl.fr/actu/debats-societe/confinement-quand-des-chaines-de-solidarites-se-mettent-en-place-7800306019" target="_blank">
-        <img src="{{ asset('fr_CD/res/medias/rtl.png') }}" />
-    </a>
+    <img src="{{ asset('fr_CD/res/medias/okapi.png') }}" />
 </div>
