--- a/templates/_include/fr_CD/homepage_footer.html.twig
+++ b/templates/_include/fr_CD/homepage_footer.html.twig
@@ -52,8 +52,7 @@
     </div>
 
     <img src="{{ asset('fr_CD/res/medias/actualitecd.png') }}" />
-
     <img src="{{ asset('fr_CD/res/medias/bonetv.png') }}" />
-
     <img src="{{ asset('fr_CD/res/medias/okapi.png') }}" />
+    <img src="{{ asset('fr_CD/res/medias/factuel.png') }}" />
 </div>
