--- a/templates/_include/fr_CD/homepage_footer.html.twig
+++ b/templates/_include/fr_CD/homepage_footer.html.twig
@@ -53,6 +53,6 @@
 
     <img src="{{ asset('fr_CD/res/medias/actualitecd.png') }}" />
     <img src="{{ asset('fr_CD/res/medias/bonetv.png') }}" />
-    <img src="{{ asset('fr_CD/res/medias/okapi.png') }}" />
+    <img src="{{ asset('fr_CD/res/medias/okapi.jpg') }}" />
     <img src="{{ asset('fr_CD/res/medias/factuel.png') }}" />
 </div>
