--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,7 +29,7 @@
         </div>
 
         <div class="home-row">
-            <div class="home-row-half home-isolated text-white">
+            <div class="home-row-half bg-primary text-white">
                 <div class="m-4 p-3 m-lg-5 p-lg-5">
                     <a href="{{ path('process_request') }}" class="home-row-half-button text-white">
                         <div class="home-row-half-button-icon d-none d-lg-block">
@@ -50,7 +50,7 @@
                     <div class="row no-gutters text-center">
                         <div class="col-12 col-xl-auto">
                             <a href="{{ path('process_request') }}"
-                               class="btn btn-teal btn-lg border-white border mr-xl-3" style="background: transparent;">
+                               class="btn btn-primary btn-lg border-white border mr-xl-3">
                                 {{ 'label.request-help'|trans }}
                             </a>
                         </div>
@@ -93,6 +93,39 @@
                                class="btn btn-link btn-lg text-white mt-3 mt-xl-0">
                                 {{ 'label.how-work'|trans }}
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="home-row-full bg-warning">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-10">
+                    <div class="m-4 p-3 mx-lg-5 p-lg-5">
+                        <a href="{{ path('process_volunteer') }}" class="home-row-half-button text-dark">
+                            <div class="home-row-half-button-icon d-none d-lg-block">
+                                {{ include('_icons/arrow.html.twig') }}
+                            </div>
+                            <div class="home-row-half-button-label">
+                                {{ 'home.volunteer'|trans }}
+                            </div>
+                        </a>
+
+                        <div class="home-row-half-details mt-3 mb-4">
+                            <p>
+                                {{ 'home.volunteer.young-healthy'|trans }}
+                            </p>
+                            {{ 'home.volunteer.intro'|trans }}
+                        </div>
+
+                        <div class="row no-gutters text-center">
+                            <div class="col-12 col-xl-auto">
+                                <a href="{{ path('process_volunteer') }}"
+                                   class="btn btn-warning border border-dark btn-lg text-dark mr-xl-3">
+                                    {{ 'label.offer-help'|trans }}
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
