--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -155,11 +155,6 @@ blockquote {
         }
     }
 
-    &-isolated {
-        background: #007fff;
-        color: #fff;
-    }
-
     &-share {
         font-size: 18px;
         color: #666;
@@ -191,7 +186,7 @@ blockquote {
     }
 
     &-ecosystem {
-        background: #f5f5f5;
+        background: #fff;
 
         &-feedbacks {
             h5 {
@@ -241,7 +236,7 @@ blockquote {
         }
 
         &-medias img {
-            max-height: 38px;
+            max-height: 55px;
         }
     }
 }
