--- a/templates/_include/fr_CD/homepage_footer.html.twig
+++ b/templates/_include/fr_CD/homepage_footer.html.twig
@@ -1,49 +1,10 @@
-<div class="row">
-    <div class="col-lg-6">
-        <div class="home-ecosystem-assos mb-5 pb-5">
-            <div class="home-ecosystem-assos-title">
-                Nous soutenons
-            </div>
-
-            <a href="https://www.restosducoeur.org/devenir-benevole/" target="_blank"
-               title="Contactez votre antenne locale des Restos du Coeur">
-                <img src="{{ asset('fr_CD/res/assos/restosducoeur.png') }}" />
-            </a>
-
-            <a href="https://dondesang.efs.sante.fr/information-concernant-linfection-covid-19-coronavirus-sars-cov2-actualisation-19032020" target="_blank"
-               title="Prévoyez d’aller donner votre sang">
-                <img src="{{ asset('fr_CD/res/assos/efs.png') }}" />
-            </a>
-
-            <a href="https://covid19.reserve-civique.gouv.fr/" target="_blank"
-               title="Participez aux missions d'urgence et de proximité avec la Réserve civique">
-                <img src="{{ asset('fr_CD/res/assos/rc.png') }}" style="max-width: 140px;" />
-            </a>
-
-            <a href="https://solidarite-fde.fr/" target="_blank"
-               title="Plateforme de mise en relation pour les français bloqués à l'étranger">
-                <img src="{{ asset('fr_CD/res/assos/solidarite-fde.png') }}" style="max-width: 140px;" />
-            </a>
-        </div>
+<div class="home-ecosystem-assos mt-5 mb-5 pt-5 pb-5">
+    <div class="home-ecosystem-assos-title">
+        Nos partenaires
     </div>
 
-    <div class="col-lg-6">
-        <div class="home-ecosystem-assos mb-5 pb-5">
-            <div class="home-ecosystem-assos-title">
-                Soutenu par
-            </div>
-
-            <a href="https://www.le-frenchimpact.fr/nos-actualites/entraide/entraide-sanitaire" target="_blank"
-               title="En Première Ligne est labellisée Entraide sanitaire French Impact">
-                <img src="{{ asset('fr_CD/res/assos/frenchimpact.png') }}" style="max-height: 60px;" />
-            </a>
-
-            <a href="https://solidaires-handicaps.fr/action/courses-sans-contact" target="_blank"
-               title="En Première Ligne est une action de solidarité">
-                <img src="{{ asset('fr_CD/res/assos/solidarite-handicap.png') }}" style="max-height: 60px;" />
-            </a>
-        </div>
-    </div>
+    <img src="{{ asset('fr_CD/res/assos/regal.jpg') }}" />
+    <img src="{{ asset('fr_CD/res/assos/llab.png') }}" />
 </div>
 
 <div class="home-ecosystem-medias">
