--- a/templates/process/request_owner_view.html.twig
+++ b/templates/process/request_owner_view.html.twig
@@ -26,42 +26,11 @@
                             </strong>
                         </p>
 
-                        {{ 'request.delete-any-time'|trans }}
+                        {{ 'request.delete-any-time'|trans|raw }}
                     </div>
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
                         {% trans with {'when': needs[0].createdAt|localizeddate('medium', 'short') } %}request.registration-date{% endtrans %}
-                    </div>
-
-                    <div class="process-block bg-white p-3 p-lg-4 mb-4">
-                        <p>
-                            {{ 'request.details'|trans }}
-                        </p>
-
-                        <p>
-                            {{ 'request.told-us'|trans }}
-                        </p>
-
-                        {% set ageRanges = {
-                            '0-1': 'label.age-0-1',
-                            '1-2': 'label.age-1-2',
-                            '3-5': 'label.age-3-5',
-                            '6-9': 'label.age-6-9',
-                            '10-12': 'label.age-10-12',
-                            '13-': 'label.13-and-over',
-                        } %}
-
-                        <ul>
-                            {% for need in needs %}
-                                <li>
-                                    {% if need.helpType == 'groceries' %}
-                                        {{ 'request.shop'|trans }}
-                                    {% elseif need.helpType == 'babysit' %}
-                                        {% trans with {'age': ageRanges[need.childAgeRange]|trans } %}request.babysit{% endtrans %}
-                                    {% endif %}
-                                </li>
-                            {% endfor %}
-                        </ul>
                     </div>
 
                     <div class="process-block bg-white p-3 p-lg-4 mb-4">
@@ -99,7 +68,7 @@
 
                         <div class="mt-3">
                             <strong class="text-muted">
-                                {{ 'request.delete-to-update'|trans }}
+                                {{ 'request.delete-to-update'|trans|raw }}
                             </strong>
                         </div>
                     </div>
